--- a/Over.html
+++ b/Over.html
@@ -11,7 +11,7 @@
   <nav>
       <link href="menustijl.css" rel="stylesheet" type="text/css" />
       <ul id='menu'>
-        <li><a href="Index.html">Home</a></li> 
+        <li><a href="index.html">Home</a></li> 
         <li><a href="Over.html">Over onze partij</a></li>
         <li><a href="Lidmaatschap.html">Word nu lid!</a></li>
         <li><a href="Contact.html">Contacteer ons</a></li>
